--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
+    "@radix-ui/react-checkbox": "^1.0.4",
     "@supabase/ssr": "^0.1.0",
     "@supabase/supabase-js": "^2.40.0",
     "class-variance-authority": "^0.7.0",
