--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@supabase/supabase-js": "^2.40.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.363.0",
     "next": "14.1.4",
+    "next-client-cookies": "^1.1.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.1",
