--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "lucide-react": "^0.363.0",
     "next": "14.1.4",
     "next-client-cookies": "^1.1.0",
+    "radix-ui": "^1.0.1",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.1",
