--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@radix-ui/react-radio-group": "^1.1.3",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-toast": "^1.1.5",
+    "@supabase/auth-helpers-sveltekit": "^0.10.0-next.3",
     "@supabase/ssr": "^0.1.0",
     "@supabase/supabase-js": "^2.40.0",
     "class-variance-authority": "^0.7.0",
