--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "lucide-react": "^0.363.0",
     "next": "14.1.4",
     "next-client-cookies": "^1.1.0",
+    "next-intl": "^3.11.1",
     "radix-ui": "^1.0.1",
     "react": "^18",
     "react-dom": "^18",
