--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@supabase/supabase-js": "^2.40.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "embla-carousel-autoplay": "^8.0.1",
     "embla-carousel-react": "^8.0.1",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.363.0",
