--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@hookform/resolvers": "^3.3.4",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-checkbox": "^1.0.4",
+    "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-radio-group": "^1.1.3",
     "@radix-ui/react-select": "^2.0.0",
+    "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
     "@supabase/auth-helpers-sveltekit": "^0.10.0-next.3",
     "@supabase/ssr": "^0.1.0",
@@ -30,12 +32,12 @@
     "radix-ui": "^1.0.1",
     "react": "^18",
     "react-dom": "^18",
-    "react-hook-form": "^7.51.1",
+    "react-hook-form": "^7.51.3",
     "sharp": "^0.33.3",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
     "use-debounce": "^10.0.0",
-    "zod": "^3.22.4"
+    "zod": "^3.23.0"
   },
   "devDependencies": {
     "@types/node": "20.11.30",
